# beads-deck

./: AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
Formula/: beads-deck.rb
examples/: strata.workflow.json
scripts/: make-macos-app.sh
src/: app.rs  bd.rs  lru.rs  main.rs  markdown.rs  query.rs  registry.rs  schema.rs  state.rs  theme.rs  util.rs  views.rs
src/views/: activity.rs  board.rs  bulk.rs  detail.rs  modals.rs  releases.rs  selector.rs  topbar.rs  tree.rs  workflow_editor.rs
